tests/ui/errors/snapshots/infer_closure_return_type_mismatch.snap
---
source: tests/ui/errors/mod.rs
---
  [error] Type mismatch
    ╭─[test.lis:9:25]
  8 │ fn test() {
  9 │   handler(|e: string| { fmt.Println(e) })
    ·                         ───────┬──────
    ·                                ╰── expected `()`, found `Result<int, error>`
 10 │ }
    ╰────
  help: Change the type annotation to `Result<int, error>` or convert the value to `()` · code: [infer.type_mismatch]
