tests/ui/errors/snapshots/infer_comparable_bound_rejects_slice.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Bound not satisfied
   ╭─[test.lis:5:23]
 4 │ fn test() {
 5 │   requires_comparable([1, 2, 3])
   ·                       ────┬────
   ·                           ╰── does not satisfy `Comparable`
 6 │ }
   ╰────
  help: `Comparable` requires `==`, and slices cannot be compared with `==` in Go. If you own this bound, relax it, or accept the comparison as an explicit argument instead · code: [infer.not_comparable_bound]
