tests/ui/errors/snapshots/infer_comparable_does_not_satisfy_ordered_in_wrapper.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Missing bound on type parameter
   ╭─[test.lis:7:20]
 6 │ fn wrapper<T: Comparable>(x: T) {
 7 │   requires_ordered(x)
   ·                    ┬
   ·                    ╰── does not satisfy `Ordered`
 8 │ }
   ╰────
  help: The parameter must be `cmp.Ordered` but the argument is unbounded. Add this bound to the enclosing function: `<T: cmp.Ordered>` · code: [infer.missing_bound_on_param]
