tests/ui/errors/snapshots/infer_comparable_in_param_position_rejected.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ `Comparable` is a bound, not a value type
   ╭─[test.lis:2:14]
 1 │ 
 2 │ fn takes(_x: Comparable) {}
   ·              ─────┬────
   ·                   ╰── not allowed here
   ╰────
  help: Use `Comparable` only as a bound to constrain a generic parameter, e.g. `fn f<T: Comparable>(x: T)` · code: [infer.bound_only_in_value_position]
