tests/ui/errors/snapshots/infer_compare_struct_with_function_field_suggests_no_bound.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Type mismatch
   ╭─[test.lis:5:3]
 4 │ fn compare<T>(x: S<T>, y: S<T>) -> bool {
 5 │   x == y
   ·   ┬
   ·   ╰── `S<T>` cannot be compared with `==`
 6 │ }
   ╰────
  help: The `==` and `!=` operators cannot be used on a struct containing non-comparable fields because they are not comparable in Go · code: [infer.type_mismatch]
