tests/ui/errors/snapshots/infer_compare_unbounded_container_suggests_bound_then_equals.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Missing comparable bound
   ╭─[test.lis:3:3]
 2 │ fn compare<T>(a: Slice<T>, b: Slice<T>) -> bool {
 3 │   a == b
   ·   ┬
   ·   ╰── `Slice<T>` cannot be compared with `==`
 4 │ }
   ╰────
  help: Add the bound where `T` is declared: `<T: Comparable>`, then use `.equals()` · code: [infer.param_needs_comparable_bound]
