tests/ui/errors/snapshots/infer_compare_unbounded_param_suggests_ordered_bound.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Type mismatch
   ╭─[test.lis:3:6]
 2 │ fn largest<T>(a: T, b: T) -> T {
 3 │   if a > b { a } else { b }
   ·      ┬
   ·      ╰── expected orderable, found `T`
 4 │ }
   ╰────
  help: `T` is an unconstrained type parameter. Add the bound where `T` is declared: `<T: Ordered>` · code: [infer.type_mismatch]
